--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Interest Calculator</title>
+    <title>Web App – Simple Interest Calculator</title>
 </head>
     <body>
         <div class="maindiv">
@@ -37,7 +37,7 @@
             </div>
             <br>
             <footer>
-                &#169; This Calculator belongs to Sam
+                &#169; Everyone Can Get Rich
             </footer>
         </div>
     </body>
